more spacing and fixes

--- a/src/renderer/screens/startup/WorkspacesScreen.scss
+++ b/src/renderer/screens/startup/WorkspacesScreen.scss
@@ -56,9 +56,10 @@
       opacity: .5;
       margin: 0 0 .5rem;
       font-family: "Fira Code Regular";
+      font-weight: bold;
     }
     section {
-      margin-top: 1.5rem;
+      margin-top: 1.75rem;
       color: var(--app-navbar-text);
       display: flex;
       & > * {
@@ -112,7 +113,11 @@
           }
         }
         p {
-          // TODO: style the WELCOME TO GANACHE list
+          font-family: "Fira Code Regular";
+          font-weight: bold;
+          margin: 0;
+          height: 8rem;
+          min-width: 325px;
         }
       }
       .right button {
@@ -122,7 +127,7 @@
         margin-bottom: 2rem;
         display: block;
         height: auto;
-        padding: 2.5rem 1rem;
+        padding: 2.5rem 1.75rem;
         font-size: 2em;
         border-radius: .4rem;
         color: var(--app-statusbar-background);
